// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerSection > renders rows for ZeroToOneHundred mode and uses getAveragePrecision 1`] = `
<div>
  <section>
    <div
      class="table"
    >
      <div
        class="tableRow"
      >
        <div
          class="main"
        >
          <div
            class="badge"
          >
            1
          </div>
          <div
            class="value"
            title="Carol"
          >
            Carol
          </div>
          <div>
            <svg
              class="circularProgressBar correct small"
              height="60"
              width="60"
            >
              <circle
                class="circleBackground"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-width="6"
              />
              <circle
                class="circleProgress"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-linecap="round"
                stroke-width="6"
                style="stroke-dasharray: 169.64600329384882; stroke-dashoffset: 98.39468191043233;"
              />
              <text
                class="progressText"
                dominant-baseline="middle"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                42
                %
              </text>
            </svg>
          </div>
          <div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="details"
        >
          <div
            class="item"
          >
            <div
              class="title"
            >
              Correct
            </div>
            <div
              class="value"
            >
              8/10
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="title"
            >
              Fastest
            </div>
            <div
              class="value"
            >
              3.2s
            </div>
          </div>
        </div>
      </div>
      <div
        class="tableRow"
      >
        <div
          class="main"
        >
          <div
            class="badge"
          >
            2
          </div>
          <div
            class="value"
            title="Dave"
          >
            Dave
          </div>
          <div>
            <svg
              class="circularProgressBar correct small"
              height="60"
              width="60"
            >
              <circle
                class="circleBackground"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-width="6"
              />
              <circle
                class="circleProgress"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-linecap="round"
                stroke-width="6"
                style="stroke-dasharray: 169.64600329384882; stroke-dashoffset: 98.39468191043233;"
              />
              <text
                class="progressText"
                dominant-baseline="middle"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                42
                %
              </text>
            </svg>
          </div>
          <div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="details"
        >
          <div
            class="item"
          >
            <div
              class="title"
            >
              Correct
            </div>
            <div
              class="value"
            >
              8/10
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="title"
            >
              Fastest
            </div>
            <div
              class="value"
            >
              3.2s
            </div>
          </div>
        </div>
      </div>
      <div
        class="tableRow"
      >
        <div
          class="main"
        >
          <div
            class="badge"
          >
            3
          </div>
          <div
            class="value"
            title="Eve"
          >
            Eve
          </div>
          <div>
            <svg
              class="circularProgressBar correct small"
              height="60"
              width="60"
            >
              <circle
                class="circleBackground"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-width="6"
              />
              <circle
                class="circleProgress"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-linecap="round"
                stroke-width="6"
                style="stroke-dasharray: 169.64600329384882; stroke-dashoffset: 98.39468191043233;"
              />
              <text
                class="progressText"
                dominant-baseline="middle"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                42
                %
              </text>
            </svg>
          </div>
          <div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="details"
        >
          <div
            class="item"
          >
            <div
              class="title"
            >
              Correct
            </div>
            <div
              class="value"
            >
              8/10
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="title"
            >
              Fastest
            </div>
            <div
              class="value"
            >
              3.2s
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`PlayerSection > renders rows with badges and nicknames for Classic mode and uses getCorrectPercentage 1`] = `
<div>
  <section>
    <div
      class="table"
    >
      <div
        class="tableRow"
      >
        <div
          class="main"
        >
          <div
            class="badge"
          >
            1
          </div>
          <div
            class="value"
            title="Alice"
          >
            Alice
          </div>
          <div>
            <svg
              class="circularProgressBar correct small"
              height="60"
              width="60"
            >
              <circle
                class="circleBackground"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-width="6"
              />
              <circle
                class="circleProgress"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-linecap="round"
                stroke-width="6"
                style="stroke-dasharray: 169.64600329384882; stroke-dashoffset: 42.411500823462205;"
              />
              <text
                class="progressText"
                dominant-baseline="middle"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                75
                %
              </text>
            </svg>
          </div>
          <div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="details"
        >
          <div
            class="item"
          >
            <div
              class="title"
            >
              Correct
            </div>
            <div
              class="value"
            >
              8/10
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="title"
            >
              Fastest
            </div>
            <div
              class="value"
            >
              3.2s
            </div>
          </div>
        </div>
      </div>
      <div
        class="tableRow"
      >
        <div
          class="main"
        >
          <div
            class="badge"
          >
            2
          </div>
          <div
            class="value"
            title="Bob"
          >
            Bob
          </div>
          <div>
            <svg
              class="circularProgressBar correct small"
              height="60"
              width="60"
            >
              <circle
                class="circleBackground"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-width="6"
              />
              <circle
                class="circleProgress"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-linecap="round"
                stroke-width="6"
                style="stroke-dasharray: 169.64600329384882; stroke-dashoffset: 42.411500823462205;"
              />
              <text
                class="progressText"
                dominant-baseline="middle"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                75
                %
              </text>
            </svg>
          </div>
          <div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="details"
        >
          <div
            class="item"
          >
            <div
              class="title"
            >
              Correct
            </div>
            <div
              class="value"
            >
              8/10
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="title"
            >
              Fastest
            </div>
            <div
              class="value"
            >
              3.2s
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`PlayerSection > toggles details for a row and shows detail items for Classic mode 1`] = `
<div>
  <section>
    <div
      class="table"
    >
      <div
        class="tableRow"
      >
        <div
          class="main"
        >
          <div
            class="badge"
          >
            1
          </div>
          <div
            class="value"
            title="Alice"
          >
            Alice
          </div>
          <div>
            <svg
              class="circularProgressBar correct small"
              height="60"
              width="60"
            >
              <circle
                class="circleBackground"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-width="6"
              />
              <circle
                class="circleProgress"
                cx="30"
                cy="30"
                fill="transparent"
                r="27"
                stroke-linecap="round"
                stroke-width="6"
                style="stroke-dasharray: 169.64600329384882; stroke-dashoffset: 42.411500823462205;"
              />
              <text
                class="progressText"
                dominant-baseline="middle"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                75
                %
              </text>
            </svg>
          </div>
          <div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="details"
        >
          <div
            class="item"
          >
            <div
              class="title"
            >
              Correct
            </div>
            <div
              class="value"
            >
              8/10
            </div>
          </div>
          <div
            class="item"
          >
            <div
              class="title"
            >
              Fastest
            </div>
            <div
              class="value"
            >
              3.2s
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
